deploy/k3s/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dtaas
  labels:
    name: dtaas
    app: dtaas-platform
